--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -32,7 +32,7 @@ body {
 
 h1 {
     width: 100%;
-    background-color: blue;
+    background-color: rgb(18, 127, 190);
     color: white;
     padding: 20px;
     margin: 0 0 20px;
@@ -51,10 +51,10 @@ li {
     font-size: 16px;
     padding: 5px;
 }
-
+/* 
 li:nth-child(even) {
     background-color: #efefef;
-}
+} */
 
 .nav {
     margin: 0 0 20px;
@@ -62,4 +62,7 @@ li:nth-child(even) {
 
 .nav button {
     font-size: 18px;
+    border: 1px solid rgba(200, 100, 50, .5);
+    border-radius: 3px;
+    padding: 2px 5px;
 }
