--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -23,7 +23,7 @@ body {
 #app {
     flex-direction: column;
     height: auto;
-    max-width: 500px;
+    max-width: 800px;
 }
 
 body {
@@ -31,12 +31,12 @@ body {
 }
 
 h1 {
-    width: 100%;
-    background-color: rgb(18, 127, 190);
-    color: white;
-    padding: 20px;
-    margin: 0 0 20px;
-    text-align: center;
+width: 200%;
+background-color: rgb(-22, 176, 170);
+color: white;
+padding: 70px;
+margin: 0 0 20px;
+text-align: center;
 }
 
 ul {
@@ -65,4 +65,8 @@ li:nth-child(even) {
     border: 1px solid rgba(200, 100, 50, .5);
     border-radius: 3px;
     padding: 2px 5px;
+}
+
+.nav button:hover {
+    background-color: rgba(200,200,240, .4);
 }
